--- a/locales/en.json
+++ b/locales/en.json
@@ -8,7 +8,8 @@
         "patterns_tab": "Patterns",
         "patterns": "Patterns",
         "solid_colors": "Solid Colors",
-        "gradient_colors": "Gradient Colors"
+        "gradient_colors": "Gradient Colors",
+        "svg_patterns": "SVG Patterns"
     },
     "RightPropertyPanel": {
         "property": "Property",
@@ -29,7 +30,44 @@
         "landscape": "Landscape",
         "portrait": "Portrait",
         "confirm": "Confirm",
-        "select_dimensions": "Select Dimensions"
+        "select_dimensions": "Select Dimensions",
+        "customize_svg": "Customize SVG Pattern",
+        "randomize": "Randomize",
+        "select_svg_pattern": "Please select an SVG pattern first",
+        "color": "Color",
+        "scale": "Scale",
+        "strokeWidth": "Stroke Width",
+        "lineWidth": "Line Width",
+        "spacing": "Spacing",
+        "gridSize": "Grid Size",
+        "radius": "Radius",
+        "density": "Density",
+        "lines": "Lines",
+        "backgroundColor": "Background Color",
+        "primaryColor": "Primary Color",
+        "secondaryColor": "Secondary Color",
+        "accentColor": "Accent Color",
+        "complexity": "Complexity",
+        "svg_panel_title": "Heazy Wave Settings",
+        "shape": "SHAPE",
+        "amplitude": "Amplitude",
+        "frequency": "Frequency",
+        "speed": "Speed",
+        "direction": "Direction",
+        "left": "Left",
+        "right": "Right",
+        "none": "None",
+        "rotation": "Rotation",
+        "layers": "Layers",
+        "layer_opacity": "Layer Opacity",
+        "colors": "COLORS",
+        "start_color": "Start Color",
+        "end_color": "End Color",
+        "contrast": "Contrast",
+        "background": "Background",
+        "gradient": "Gradient",
+        "solid": "Solid",
+        "randomize_wave": "Randomize"
     },
     "ImageEditorToolbar": {
         "edit": "Edit",
