--- a/locales/zh.json
+++ b/locales/zh.json
@@ -8,7 +8,8 @@
         "patterns_tab": "纹理",
         "patterns": "纹理",
         "solid_colors": "纯色",
-        "gradient_colors": "渐变色"
+        "gradient_colors": "渐变色",
+        "svg_patterns": "SVG图案"
     },
     "RightPropertyPanel": {
         "property": "属性",
@@ -29,7 +30,44 @@
         "landscape": "横屏",
         "portrait": "竖屏",
         "confirm": "确认",
-        "select_dimensions": "选择尺寸"
+        "select_dimensions": "选择尺寸",
+        "customize_svg": "自定义SVG图案",
+        "randomize": "随机生成",
+        "select_svg_pattern": "请先选择SVG图案",
+        "color": "颜色",
+        "scale": "缩放",
+        "strokeWidth": "描边宽度",
+        "lineWidth": "线条宽度",
+        "spacing": "间距",
+        "gridSize": "网格大小",
+        "radius": "半径",
+        "density": "密度",
+        "lines": "线条数量",
+        "backgroundColor": "背景颜色",
+        "primaryColor": "主要颜色",
+        "secondaryColor": "次要颜色",
+        "accentColor": "强调颜色",
+        "complexity": "复杂度",
+        "svg_panel_title": "波浪设置",
+        "shape": "形状",
+        "amplitude": "振幅",
+        "frequency": "频率",
+        "speed": "速度",
+        "direction": "方向",
+        "left": "向左",
+        "right": "向右",
+        "none": "无",
+        "rotation": "旋转",
+        "layers": "层数",
+        "layer_opacity": "层透明度",
+        "colors": "颜色",
+        "start_color": "起始颜色",
+        "end_color": "结束颜色",
+        "contrast": "对比度",
+        "background": "背景",
+        "gradient": "渐变",
+        "solid": "纯色",
+        "randomize_wave": "随机生成"
     },
     "ImageEditorToolbar": {
         "edit": "编辑",
