--- a/locales/en.json
+++ b/locales/en.json
@@ -9,7 +9,57 @@
         "patterns": "Patterns",
         "solid_colors": "Solid Colors",
         "gradient_colors": "Gradient Colors",
-        "svg_patterns": "SVG Patterns"
+        "svg_patterns": "SVG Patterns",
+        "layouts_tab": "Layouts",
+        "layout_presets": "Layout Presets",
+        "layout_center": "Center Layout",
+        "layout_center_desc": "All elements center aligned",
+        "layout_top": "Top Layout",
+        "layout_top_desc": "Elements aligned at the top",
+        "layout_bottom": "Bottom Layout",
+        "layout_bottom_desc": "Elements aligned at the bottom",
+        "layout_left": "Left Layout",
+        "layout_left_desc": "Elements aligned to the left",
+        "layout_right": "Right Layout",
+        "layout_right_desc": "Elements aligned to the right",
+        "layout_minimal": "Minimal Layout",
+        "layout_minimal_desc": "Only title visible, others hidden",
+        "layout_title_only": "Title Only",
+        "layout_title_only_desc": "Shows only the title text",
+        "layout_author_focus": "Author Focus",
+        "layout_author_focus_desc": "Highlights the author information",
+        "layout_corner_bl": "Bottom Left",
+        "layout_corner_bl_desc": "All elements in bottom left corner",
+        "layout_corner_tr": "Top Right",
+        "layout_corner_tr_desc": "All elements in top right corner",
+        "layout_stacked": "Stacked Layout",
+        "layout_stacked_desc": "Elements vertically stacked",
+        "layout_title_bottom": "Title at Bottom",
+        "layout_title_bottom_desc": "Title and author near the bottom",
+        "layout_magazine_cover": "Magazine Cover",
+        "layout_magazine_cover_desc": "Large title at top, author on right, icon at top-left",
+        "layout_movie_poster": "Movie Poster",
+        "layout_movie_poster_desc": "Title at top third, author in middle, icon at bottom",
+        "layout_book_cover": "Book Cover",
+        "layout_book_cover_desc": "Title at top, author at bottom, icon in middle",
+        "layout_minimal_poster": "Minimal Poster",
+        "layout_minimal_poster_desc": "Centered title, author at bottom, icon at top-right",
+        "layout_asymmetric": "Asymmetric",
+        "layout_asymmetric_desc": "Title at bottom-left, author at bottom-right, icon at top-left",
+        "layout_split": "Split Layout",
+        "layout_split_desc": "Title on left, author and icon on right side",
+        "layout_banner": "Banner",
+        "layout_banner_desc": "Title at bottom, author and icon at top corners",
+        "layout_thirds": "Rule of Thirds",
+        "layout_thirds_desc": "Title at top third, author and icon at bottom corners",
+        "layout_brand": "Brand Identity",
+        "layout_brand_desc": "Icon at top, title in center, author below title",
+        "layout_social_media": "Social Media",
+        "layout_social_media_desc": "Title and author centered, icon at top-left corner",
+        "layout_clean_title": "Clean Title Focus",
+        "layout_clean_title_desc": "Only title visible in center, other elements hidden",
+        "layout_author_spotlight": "Author Spotlight",
+        "layout_author_spotlight_desc": "Title at top, author and icon prominently in center"
     },
     "RightPropertyPanel": {
         "property": "Property",
@@ -69,7 +119,6 @@
         "solid": "Solid",
         "randomize_wave": "Randomize",
         "title_width": "Title Width",
-        "social_media": "Social Media",
         "devices": "Devices"
     },
     "ImageEditorToolbar": {
