--- a/locales/zh.json
+++ b/locales/zh.json
@@ -9,7 +9,57 @@
         "patterns": "纹理",
         "solid_colors": "纯色",
         "gradient_colors": "渐变色",
-        "svg_patterns": "SVG图案"
+        "svg_patterns": "SVG图案",
+        "layouts_tab": "布局",
+        "layout_presets": "布局预设",
+        "layout_center": "居中布局",
+        "layout_center_desc": "所有元素居中对齐",
+        "layout_top": "顶部布局",
+        "layout_top_desc": "元素靠近顶部显示",
+        "layout_bottom": "底部布局",
+        "layout_bottom_desc": "元素靠近底部显示",
+        "layout_left": "左侧布局",
+        "layout_left_desc": "元素靠近左侧显示",
+        "layout_right": "右侧布局",
+        "layout_right_desc": "元素靠近右侧显示",
+        "layout_minimal": "简约布局",
+        "layout_minimal_desc": "只显示标题，隐藏其他元素",
+        "layout_title_only": "仅标题",
+        "layout_title_only_desc": "只显示标题文本",
+        "layout_author_focus": "作者焦点",
+        "layout_author_focus_desc": "突出显示作者信息",
+        "layout_corner_bl": "左下角",
+        "layout_corner_bl_desc": "所有元素放置在左下角",
+        "layout_corner_tr": "右上角",
+        "layout_corner_tr_desc": "所有元素放置在右上角",
+        "layout_stacked": "堆叠布局",
+        "layout_stacked_desc": "元素垂直居中堆叠",
+        "layout_title_bottom": "标题底部",
+        "layout_title_bottom_desc": "标题和作者信息靠近底部",
+        "layout_magazine_cover": "杂志封面",
+        "layout_magazine_cover_desc": "大标题在顶部，作者在右侧，图标在左上角",
+        "layout_movie_poster": "电影海报",
+        "layout_movie_poster_desc": "标题在上三分之一，作者居中，图标在底部",
+        "layout_book_cover": "书籍封面",
+        "layout_book_cover_desc": "标题在上部，作者在底部，图标在中间",
+        "layout_minimal_poster": "简约海报",
+        "layout_minimal_poster_desc": "标题居中，作者在底部，图标在右上角",
+        "layout_asymmetric": "非对称布局",
+        "layout_asymmetric_desc": "标题在左下角，作者在右下角，图标在左上角",
+        "layout_split": "分割布局",
+        "layout_split_desc": "标题在左侧，作者和图标在右侧垂直排列",
+        "layout_banner": "横幅布局",
+        "layout_banner_desc": "标题在底部，作者和图标在顶部两角",
+        "layout_thirds": "三分法则",
+        "layout_thirds_desc": "标题在上三分之一处，作者和图标在底部两侧",
+        "layout_brand": "品牌形象",
+        "layout_brand_desc": "图标在顶部，标题在中间，作者在标题下方",
+        "layout_social_media": "社交媒体",
+        "layout_social_media_desc": "标题和作者居中，图标在左上角",
+        "layout_clean_title": "纯标题焦点",
+        "layout_clean_title_desc": "仅显示中央的标题，其他元素隐藏",
+        "layout_author_spotlight": "作者聚焦",
+        "layout_author_spotlight_desc": "标题在顶部，作者和图标突出显示在中心"
     },
     "RightPropertyPanel": {
         "property": "属性",
@@ -69,7 +119,6 @@
         "solid": "纯色",
         "randomize_wave": "随机生成",
         "title_width": "标题宽度",
-        "social_media": "社交平台",
         "devices": "设备"
     },
     "ImageEditorToolbar": {
